# oresat-battery-testing

./: .gitignore  .gitmodules  .~lock.oresat-battery-test-board-bom-fullX4ods#  2022-02-24-Note-00-01.xopp  98-labjack.rules  99-b6mini.rules  README.md  notes_for_lev.md  oresat-battery-test-board-bom-fullX4ods  pyproject.toml  requirements.txt
battery-test-board/: #auto_saved_files#  .~lock.oresat-battery-test-board-bom.ods#  battery-test-board-v1.kicad_prl  battery-test-board-v1.kicad_pro  battery-test-board.kicad_pcb  battery-test-board.kicad_prl  battery-test-board.kicad_pro  battery-test-board.kicad_sch  battery-test-board.kicad_sch-bak  fp-lib-table  oresat-battery-test-board-bom.ods  oresat-battery-test-board-bom.xlsx  sym-lib-table
battery-tester/: Device.hh  Makefile  binding.cpp  engage.py
battery_tester/: Makefile  __init__.py  __main__.py  all  b6  battbank.py  battery_test_jig.py  charge_battery.py  data_to_csv_functions.py  engage.py  libb6_interface_utils.py  liblabjack.py  main.cc  playground.py  temp_notes.c  test_BTJ.py
documentation/: 99-b6mini.rules  readMe.txt
hardware-specs/: oresat-battery-test-board-bom.ods
labjack-connector/: labjack-connector.kicad_pcb  labjack-connector.kicad_pro  labjack-connector.kicad_sch
libraries/: Charger.cpp  Charger.h  Device_Names.c  Makefile  b6mini.cpp  binding.cpp  build.sh  confusion.c  main.cc  makefile  temp_file.cpp  test.py  test_device.cc
main/: battery_test_jig.py  data_to_csv_functions.py  measure.py
new_folder/: battery-bank-library.py  battery_bank_library.py  battery_test_jig.py  measure.py
(+27 files in other folders)
